WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279954
[site-isolation] Cross origin <iframe>s should not (usually) draw a background color
https://bugs.webkit.org/show_bug.cgi?id=279954
Summary
[site-isolation] Cross origin <iframe>s should not (usually) draw a backgroun...
Matt Woodrow
Reported
2024-09-18 21:49:49 PDT
Cross-origin <iframe>s currently draw a white background by default, and they should not.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-18 21:49:57 PDT
<
rdar://problem/136270045
>
Matt Woodrow
Comment 2
2024-09-18 21:55:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33880
EWS
Comment 3
2024-09-23 19:36:10 PDT
Committed
284131@main
(6b79ff056204): <
https://commits.webkit.org/284131@main
> Reviewed commits have been landed. Closing PR #33880 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug