[site-isolation] Cross origin <iframe>s should not (usually) draw a background color. https://bugs.webkit.org/show_bug.cgi?id=279954 <rdar://136270045>

Reviewed by Simon Fraser.

Adds 'isMainFrameCompositor' to RenderLayerCompositor to distinguish between
actual main-frame compositors, vs process root ones.

Use this to avoid setting a lot of extra layers that should only been needed on
the actual main frame (like the overhang areas layer for overscroll).

Also fixes RenderView::shouldPaintBaseBackground() to detect being a main-frame
using the Frame hierarchy instead of checking for an owner element. This is
still somewhat wrong, since it wants the owner element to check for a 'frame'
tag, which can't be done cross-process.

* LayoutTests/http/tests/site-isolation/basic-transparent-iframe-expected.html: Added.
* LayoutTests/http/tests/site-isolation/basic-transparent-iframe.html: Added.
* LayoutTests/http/tests/site-isolation/resources/no-background.html: Added.
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateCompositingLayers):
(WebCore::RenderLayerCompositor::isAsyncScrollableStickyLayer const):
(WebCore::RenderLayerCompositor::requiresScrollLayer const):
(WebCore::RenderLayerCompositor::isMainFrameCompositor const):
(WebCore::RenderLayerCompositor::shouldCompositeOverflowControls const):
(WebCore::RenderLayerCompositor::requiresOverhangAreasLayer const):
(WebCore::RenderLayerCompositor::requiresContentShadowLayer const):
(WebCore::RenderLayerCompositor::updateLayerForTopOverhangArea):
(WebCore::RenderLayerCompositor::updateLayerForBottomOverhangArea):
(WebCore::RenderLayerCompositor::updateLayerForHeader):
(WebCore::RenderLayerCompositor::updateLayerForFooter):
* Source/WebCore/rendering/RenderLayerCompositor.h:
* Source/WebCore/rendering/RenderView.cpp:
(WebCore::RenderView::shouldPaintBaseBackground const):

Canonical link: https://commits.webkit.org/284131@main